--- a/index.html
+++ b/index.html
@@ -21,25 +21,25 @@
 <div class="flex-wrapper">
   <div class="slider-wrapper">
     <div class="slide active">
-      <img src="img/1.jpg" alt="">
+      <img src="1.jpg" alt="">
     </div>
     <div class="slide">
-      <img src="img/2.jpg" alt="">
+      <img src="2.jpg" alt="">
     </div>
     <div class="slide">
-      <img src="img/3.jpg" alt="">
+      <img src="3.jpg" alt="">
     </div>
     <div class="slide">
-      <img src="img/4.jpg" alt="">
+      <img src="4.jpg" alt="">
     </div>
     <div class="slide">
-      <img src="img/5.jpg" alt="">
+      <img src="5.jpg" alt="">
     </div>
     <div class="slide">
-      <img src="img/6.jpg" alt="">
+      <img src="6.jpg" alt="">
     </div>
     <div class="slide">
-      <img src="img/7.jpg" alt="">
+      <img src="7.jpg" alt="">
     </div>
     <div id="btn-prev"></div>
     <div id="btn-next"></div>
