--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <div class="describes-wrapper">
   <h2 class="describe active">Ревнивая</h2>
   <h2 class="describe">Сексуальная</h2>
-  <h2 class="describe">Измученная</h2>ssd
+  <h2 class="describe">Измученная</h2>
   <h2 class="describe">Прекрасная</h2>
   <h2 class="describe">Вредная</h2>
   <h2 class="describe">Задумчивая</h2>
